# arxiv-digest

./: .gitignore  LICENSE  README.md  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
arxiv_digest/: __init__.py  __main__.py  cli.py  config.py  db.py  fetch.py  llm.py  models.py  render.py  scoring.py  utils.py
examples/: config.example.toml
scripts/: demo_digest.py  render_last_digest.py
tests/: test_config.py  test_fetch.py  test_render.py  test_scoring.py  test_utils.py
