[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-digest"
version = "0.3.0"
description = "A configurable daily digest of new arXiv papers, with optional LLM reranking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["arxiv", "research", "digest", "rss", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[project.scripts]
arxiv-digest = "arxiv_digest.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/arxiv-digest"
Issues = "https://github.com/your-username/arxiv-digest/issues"

[tool.setuptools.packages.find]
include = ["arxiv_digest*"]
exclude = ["tests*", "examples*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["error::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False patterns

[tool.coverage.run]
branch = true
source = ["arxiv_digest"]

[tool.coverage.report]
show_missing = true
skip_covered = false
